# business-acquisition-mvp

./: .env.example  .gitignore  APOLLO_OUTREACH_IMPLEMENTATION.md  AUDIT_FIX_COMPLETE.md  AUTO_GENERATION_FEATURE.md  BUG_FIX_EMPLOYEE_COUNT.md  CLAUDE.md  COMPONENT_STATUS.md  CRITICAL_AUDIT_ESTIMATION_HARDCODED_DATA.md  CRITICAL_FIXES_SUMMARY.md  Claude results - implementation plan AI Automated outreach to potential business.docx  DATA_COLLECTION_GUIDE.md  DATA_SOURCE_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS_UPDATE.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  FIELD_ORDER_ENFORCEMENT_SUMMARY.md  HOW_TO_GENERATE_LEADS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  NEW_DATA_SOURCES_IMPLEMENTATION.md  OPTION_C_COMPLETE.md  PHASE2_QUICK_START.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_V3.md  README.md  README_COMMANDS.md  RELIABLE_LEAD_GENERATION_PLAN.md  SECURITY.md  STANDARDIZED_OUTPUT_FORMAT.md  STANDARD_FIELD_ORDER.md  UPDATED_PLAN_WITH_AUTOMATION.md  VALIDATION_STATUS_REPORT.md  WEBSITE_VALIDATION.md  acquisition_filtering_criteria.md  add_postal_codes_fast.py  add_postal_codes_free.py  add_postal_codes_to_100_leads.py  apply_filters_and_revalidate.py  (+26 more)
automation_env/: pyvenv.cfg
chroma_db/: chroma.sqlite3
data/: .gitkeep  LEADS_SUMMARY_20251016_194208.md  LEAD_SUMMARY_REPORT.txt  acquisition_profiles_top10.json  ai_discovered_top10_prospects.csv  draft_emails.txt  email_patterns_top10.csv  filtered_prospects.csv  final_target_prospects.csv  google_places_SMARTLY_ENRICHED.csv  hamilton_chamber_verified_prospects.csv  hamilton_diverse_verified_prospects.csv  initial_discovery_40prospects.csv  legacy_3prospects_outdated.csv  phase2_acquisition_summary.md  real_businesses_20251016_092826.csv  strict_filtered_verified_prospects.csv  test_export_with_contacts.csv  top_10_prospects_with_contacts.csv  top_prospects_ranked.csv
docs/: AUTOMATION.md  CHANGELOG.md  CURRENT_STATUS.md  FIXES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PRACTICAL_IMPLEMENTATION_PLAN.md  Production-Ready Lead Generation System Implementation Guide.txt  README.md  VALIDATION_SYSTEM.md
exports/: current_leads_20250904_185327.csv  current_leads_20250927_165405.csv  current_leads_20250928_201537.csv  current_leads_20250928_201741.csv  current_leads_20250928_203027.csv  current_leads_20250928_204304.csv  current_leads_20250928_204525.csv  current_leads_20250928_204647.csv  current_leads_20250928_204748.csv  current_leads_20250928_234741.csv  current_leads_20250928_235249.csv  current_leads_20250928_235346.csv  current_leads_20250928_235422.csv  current_leads_CLEAN_20250928.csv  discovery_report_with_exclusions_20250903_153429.txt  leads_summary_report_20250903_132443.txt  leads_summary_report_20250903_142521.txt  leads_summary_report_20250903_143036.txt  leads_summary_report_20250903_143329.txt  leads_summary_report_20250903_153915.txt  leads_summary_report_20250903_204905.txt  leads_summary_report_20250904_185559.txt  leads_summary_report_20250905_110208.txt  leads_summary_report_20250907_202100.txt  leads_summary_report_20250907_CORRECTED.txt  leads_summary_report_20250907_FINAL.txt  leads_summary_report_20250908_124223.txt  leads_summary_report_20250908_124928.txt  leads_summary_report_20250908_124946.txt  leads_summary_report_20250908_125000.txt  leads_summary_report_20250927_165405.txt  (+54 more)
(+281 files in other folders)
